# le4-agent

./: .gitignore  Makefile  README.md  test1.txt
data/: sol_circle_gauss.txt  sol_linear_nokernel.txt
lib/QuadProg++/: Array.hh  Makefile  Makefile.am  Makefile.in  QuadProg++.hh
src/: CrossValid.cpp  CrossValid.h  SVM.cpp  SVM.h  SVM.py  bidHistory_AGENT81.txt  bidHistory_AGENT93.txt  client.py  eval1.txt  eval2.txt  eval3.txt  foolclient.py  simpleclient.py  sol_circle_gauss.txt  sol_linear_nokernel.txt  svmtest.cpp  svmtest.py
